--- a/style/loginStyle.css
+++ b/style/loginStyle.css
@@ -7,11 +7,57 @@
     font-family: 'Didact Gothic', sans-serif;
 }
 
-.container {
+body {
+    background: rgb(2,0,36);
+    background: linear-gradient(195deg, rgb(11, 7, 85) 0%, rgba(9,9,121,1) 35%, rgb(0, 89, 255) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    height: 100vh;
+    width: 100%;
+}
+
+.container {
+    background-image: url(../src/img/);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 30px;
     height: 500px;
     width: 500px;
+    gap: 5px;
+}
+
+.formContainer {
+    height: 400px;
+    width: 400px;
+}
+
+.formContainer h3 {
+    margin-top: 30px;
+}
+
+.formContainer input {
+    height: 50px;
+    width: 400px;
+    border-radius: 30px;
+    padding-left: 20px;
+    border: solid 1px rgb(41, 25, 185);
+}
+.formContainer form button {
+    background-color: rgb(41, 25, 185);
+    color: white;
+    height: 40px;
+    width: 400px;
+    margin-top: 60px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.formContainer form button:hover {
+    background-color: rgb(25, 0, 255);
+    color: white;
+    cursor: pointer;
 }
