--- a/style/loginStyle.css
+++ b/style/loginStyle.css
@@ -22,7 +22,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: rgb(102, 121, 228);
+    box-shadow: 0 4px 6px rgb(75, 121, 247);
     border-radius: 30px;
     height: 500px;
     width: 500px;
